uutilsynet gives no meaning and contradicts itself with terrible user friendliness and intentionally vague descriptions of its own criterias. This alone has discouraged me from ever considering working with html or css in the future

--- a/webexam2024/todo.txt
+++ b/webexam2024/todo.txt
@@ -1,5 +1,4 @@
-check the contrast and user friendliness
-check UU
+check UU 
 erklærings saken
-make sure the header and footer code is identical
+make sure the header and footer code is identical 2
 document the process
